syntax = "proto3";

package ai.metathings.service.deviced;

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "model.proto";

message UploadDescriptorRequest {
	OpDescriptor descriptor = 1 [(validator.field) = {msg_exists: true}];
}

message UploadDescriptorResponse {
	Descriptor descriptor = 1;
}
